--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^13.1.0",
     "@angular/animations": "~13.0.3",
     "@angular/cdk": "~13.0.3",
+    "@angular/cli": "^13.1.0",
     "@angular/common": "~13.0.3",
     "@angular/compiler": "~13.0.3",
+    "@angular/compiler-cli": "^13.1.0",
     "@angular/core": "~13.0.3",
     "@angular/forms": "~13.0.3",
     "@angular/google-maps": "^13.0.3",
@@ -43,12 +46,10 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
+    "typescript": "^4.5.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.3",
     "@briebug/cypress-schematic": "^5.0.1",
     "@types/aos": "^3.0.4",
     "@types/google-maps": "^3.2.3",
@@ -63,7 +64,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ngx-spec": "^2.1.4",
-    "typescript": "^4.4.2"
+    "ngx-spec": "^2.1.4"
   }
 }
